--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,39 @@
+# Important Notes:
+# Every field you add must be added to the root build.gradle expandProps map.
+
+# Project
+version=1.0.0
+group=com.example.examplemod
+java_version=21
+
+# Common
+minecraft_version=1.21.1
+mod_name=ExampleMod
+mod_author=Jared
+mod_id=netherportalcoordinatescale
+license=CC0-1.0
+credits=
+description=The description of your mod. \nAccepts multilines.
+minecraft_version_range=[1.21.1, 1.22)
+## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
+## https://projects.neoforged.net/neoforged/neoform
+neo_form_version=1.21.1-20240808.144430
+# The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
+parchment_minecraft=1.21
+parchment_version=2024.11.10
+
+# Fabric
+fabric_version=0.109.0+1.21.1
+fabric_loader_version=0.16.9
+
+# Forge
+forge_version=52.0.28
+forge_loader_version_range=[52,)
+
+# NeoForge
+neoforge_version=21.1.80
+neoforge_loader_version_range=[4,)
+
+# Gradle
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-
-minecraft_version=1.20.6
-minecraft_version_range=[1.20.6,1.21)
-forge_version=50.2.0
-forge_version_range=[0,)
-loader_version_range=[0,)
-
-mapping_channel=official
-mapping_version=1.20.6
-
-mod_id=netherportalcoordinatescale
-mod_name=Nether Portal Coordinate Scale
-mod_license=All Rights Reserved
-mod_version=1.0.0
-mod_group_id=com.alt.netherportalcoordinatescale
-mod_authors=Alt
-mod_description=This mod allows you to scale the coordinates of Nether portals in the Overworld, so that they match the Nether coordinates. This allows you to travel between dimensions without having to worry about the coordinate scaling factor. You can override the scaling factor in the config file, or use the default value of 1.0 (one to one).
