--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,12 @@ java_version=21
 
 # Common
 minecraft_version=1.21.1
-mod_name=ExampleMod
-mod_author=Jared
+mod_name=Nether Portal Coordinate Scale
+mod_author=Alt
 mod_id=netherportalcoordinatescale
-license=CC0-1.0
-credits=
-description=The description of your mod. \nAccepts multilines.
+license=All Rights Reserved
+credits=Alt
+description=This mod allows you to scale the coordinates of Nether portals in the Overworld, so that they match the Nether coordinates. This allows you to travel between dimensions without having to worry about the coordinate scaling factor. You can override the scaling factor in the config file, or use the default value of 1.0 (one to one).
 minecraft_version_range=[1.21.1, 1.22)
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
