Refactor project structure to support Forge and Fabric; update configurations, dependencies, and README for clarity

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,34 +1,34 @@
 # Important Notes:
+# fabric.mod.json's modid field cannot be expanded, you must change it manually.
 # Every field you add must be added to buildSrc/src/main/groovy/multiloader-common.gradle expandProps map.
 
 # Project
 version=1.0.0
 group=com.example.examplemod
-java_version=21
+java_version=17
 
 # Common
-minecraft_version=1.21.5
+minecraft_version=1.20.1
 mod_name=Nether Portal Coordinate Scale
 mod_author=Alt
 mod_id=netherportalcoordinatescale
 license=All Rights Reserved
 credits=Alt
 description=This mod allows you to scale the coordinates of Nether portals in the Overworld, so that they match the Nether coordinates. This allows you to travel between dimensions without having to worry about the coordinate scaling factor. You can override the scaling factor in the config file, or use the default value of 1.0 (one to one).
-minecraft_version_range=[1.21.5, 1.22)
+minecraft_version_range=[1.20.1, 1.21)
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21.5-20250325.162830
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21.4
-parchment_version=2025.03.23
+parchment_minecraft=1.20.1
+parchment_version=2023.09.03
 
 # Fabric
-fabric_version=0.119.5+1.21.5
-fabric_loader_version=0.16.10
+fabric_version=0.92.1+1.20.1
+fabric_loader_version=0.16.9
 
-# NeoForge
-neoforge_version=21.5.4-beta
-neoforge_loader_version_range=[4,)
+# Forge
+forge_version=47.1.47
+forge_loader_version_range=[47,)
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
