--- a/gradle.properties
+++ b/gradle.properties
@@ -7,29 +7,32 @@ group=com.example.examplemod
 java_version=21
 
 # Common
-minecraft_version=1.21.5
+minecraft_version=1.21.6
 mod_name=Nether Portal Coordinate Scale
 mod_author=Alt
 mod_id=netherportalcoordinatescale
 license=All Rights Reserved
 credits=Alt
 description=This mod allows you to scale the coordinates of Nether portals in the Overworld, so that they match the Nether coordinates. This allows you to travel between dimensions without having to worry about the coordinate scaling factor. You can override the scaling factor in the config file, or use the default value of 1.0 (one to one).
-minecraft_version_range=[1.21.5, 1.22)
+minecraft_version_range=[1.21.6, 1.22)
 ## This is the version of minecraft that the 'common' project uses, you can find a list of all versions here
 ## https://projects.neoforged.net/neoforged/neoform
-neo_form_version=1.21.5-20250325.162830
+neo_form_version=1.21.6-20250617.151856
 # The version of ParchmentMC that is used, see https://parchmentmc.org/docs/getting-started#choose-a-version for new versions
-parchment_minecraft=1.21.4
-parchment_version=2025.03.23
+parchment_minecraft=1.21.5
+parchment_version=2025.06.15
 
 # Fabric
-fabric_version=0.119.5+1.21.5
-fabric_loader_version=0.16.10
+fabric_version=0.128.1+1.21.6
+fabric_loader_version=0.16.14
 
 # NeoForge
-neoforge_version=21.5.4-beta
+neoforge_version=21.6.20-beta
 neoforge_loader_version_range=[4,)
 
-# Gradle
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Gradle - Performance Optimizations
+org.gradle.jvmargs=-Xmx4G -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.workers.max=4
