--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,9 @@ fabric_loader_version=0.16.10
 neoforge_version=21.5.4-beta
 neoforge_loader_version_range=[4,)
 
-# Gradle
-org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+# Gradle - Performance Optimizations
+org.gradle.jvmargs=-Xmx4G -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.workers.max=4
