--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -3,7 +3,7 @@ name: Build and Publish
 on:
   push:
     tags:
-      - "v*.*.*" # Triggers on version tags like v1.0.0
+      - "v*.*.*" # Triggers on version tags like v1.0.0 (also supports v1.0.1-1.21.5)
   workflow_dispatch: # Allows manual triggering
     inputs:
       version:
@@ -48,10 +48,28 @@ jobs:
       - name: Get version from gradle.properties
         id: get_version
         run: |
+          MC_VERSION=$(grep "^minecraft_version=" gradle.properties | cut -d'=' -f2)
           if [ -n "${{ github.event.inputs.version }}" ]; then
             echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
           elif [[ "${GITHUB_REF_TYPE}" == "tag" ]]; then
-            VERSION="${GITHUB_REF_NAME#v}"
+            RAW_VERSION="${GITHUB_REF_NAME#v}"
+
+            # Support tag format like v1.0.1-1.21.5 by stripping the trailing
+            # "-<minecraft_version>" suffix (only when it matches this branch).
+            if [[ "$RAW_VERSION" =~ ^(.+)-([0-9]+\.[0-9]+(\.[0-9]+)?)$ ]]; then
+              TAG_MOD_VERSION="${BASH_REMATCH[1]}"
+              TAG_MC_VERSION="${BASH_REMATCH[2]}"
+
+              if [ "$TAG_MC_VERSION" = "$MC_VERSION" ]; then
+                VERSION="$TAG_MOD_VERSION"
+              else
+                echo "Error: Tag MC version '$TAG_MC_VERSION' does not match gradle.properties minecraft_version '$MC_VERSION'"
+                exit 1
+              fi
+            else
+              VERSION="$RAW_VERSION"
+            fi
+
             echo "version=$VERSION" >> $GITHUB_OUTPUT
           else
             VERSION=$(grep "^version=" gradle.properties | cut -d'=' -f2)
